/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Umran Jameel
 */
package ucf.assignments;

import java.time.LocalDate;

public class Item {
    String itemName;
    String description = null;
    Boolean status = false;

    LocalDate dueDate;
}
