/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Umran Jameel
 */
package ucf.assignments;

import java.util.ArrayList;

public class ToDoList {
    ArrayList<Item> list = new ArrayList<Item>(); // To do list
}
