@startuml
'https://plantuml.com/class-diagram
class ApplicationController {
 ToDoList toDoList
 ListEditor listEditor
 Display display
 SaveAndLoader saveAndLoader
 + saveListToStorageClicked(ActionEvent actionEvent) : void
 + loadListClicked(ActionEvent actionEvent) : void
 + editDescriptionClicked(ActionEvent actionEvent) : void
 + addItemClicked(ActionEvent actionEvent) : void
 + removeItemCLicked(ActionEvent actionEvent) : void
 + editDueDateClicked(ActionEvent actionEvent) : void
 + markItemCompleteClicked(ActionEvent actionEvent) : void
 + displayIncompleteClicked(ActionEvent actionEvent) : void
 + displayAllClicked(ActionEvent actionEvent) : void
 + displayCompleteClicked(ActionEvent actionEvent) : void
 + clearListClicked(ActionEvent actionEvent) : void
}

class ListAssignment {
 + main(String[] args) : void
 + start(Stage primaryStage) : void
}

class Display {
 + displayCompleted(ToDoList toDoList) : ArrayList<String>
 + displayIncomplete(ToDoList toDoList) : ArrayList<String>
}

class ListEditor{
 + addToList(ToDoList toDoList, String name) : void
 + removeFromList(ToDoList toDoList, String toBeRemoved) : void
 + editDesrciption(ToDoList toDoList, String selected, String edited) : void
 + editDueDate(ToDoList toDoList, LocalDate dueDate, String itemName) : void
 + markAsComplete(ToDoList toDoList, int index) : void
 + markAsInComplete(ToDoList toDoList, int index) : void
 + clearList(ToDoList toDoList)
 + findIndex(ToDoList toDoList, String toFind) : int
}

class ToDoList {
 ArrayList<Item> arr
}

class SaveAndLoader {
 + saveListToStorage(ToDoList toDoList, File file) : void
 + loadList(ToDoList toDoList, File file) : void
}

class Item {
 String itemName
 Boolean status
 String description
 LocalDate dueDate
}

javafx.Application <|-- ListAssignment
ApplicationController -- ListAssignment
ApplicationController"1" --* "contains"ToDoList
ToDoList "100..*"--* "contains" Item
ApplicationController *-- "uses"SaveAndLoader
ApplicationController *-- "uses"Display
ApplicationController *-- "uses"ListEditor
@enduml